--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "b5-johnson-120-ipip-neo-pi-r": "1.1.21",
     "dotenv": "6.0.0",
     "express": "4.16.3",
+    "frameguard": "3.0.0",
     "helmet": "3.13.0",
     "iso-639-1": "2.0.3",
     "mongojs": "2.6.0",
